--- a/nodes/http-auth-cred.html
+++ b/nodes/http-auth-cred.html
@@ -1,22 +1,23 @@
 <script type="text/javascript">
-	RED.nodes.registerType("node-red-contrib-httpauthcred", {
-		category: "config",
+	/* global RED:false */
+	RED.nodes.registerType('node-red-contrib-httpauthcred', {
+		category: 'config',
 		defaults: {
-			name: { value: "" },
-			authType: { value: "Basic", required: true },
-			realm: { value: "", required: true },
-			username: { value: "", required: true },
-			password: { value: "", required: true },
-			hashed: { value: false, required: true }
+			name: { value: '' },
+			authType: { value: 'Basic', required: true },
+			realm: { value: '', required: true },
+			username: { value: '', required: true },
+			password: { value: '', required: true },
+			hashed: { value: false, required: true },
 		},
-		label: function () { return this.name.trim() || "[" + this.authType + "] " + this.realm.trim() + ":" + this.username.trim() + ":*****"; }
+		label: function () { return this.name.trim() || '[' + this.authType + '] ' + this.realm.trim() + ':' + this.username.trim() + ':*****'; },
 	});
 </script>
 
 <script type="text/x-red" data-template-name="node-red-contrib-httpauthcred">
 	<div class="form-row">
 		<label for="node-config-input-name"><i class="fa fa-tag"></i> Name</label>
-		<input type="texth" id="node-config-input-name">
+		<input type="texth" id="node-config-input-name" />
 	</div>
 	<div class="form-row">
 		<label for="node-config-input-authType"><i class="fa fa-list"></i> Auth Type</label>
@@ -27,18 +28,18 @@
 	</div>
 	<div class="form-row">
 		<label for="node-config-input-realm"><i class="fa fa-globe"></i> Realm</label>
-		<input type="text" id="node-config-input-realm">
+		<input type="text" id="node-config-input-realm" />
 	</div>
 	<div class="form-row">
 		<label for="node-config-input-username"><i class="fa fa-user"></i> Username</label>
-		<input type="text" id="node-config-input-username">
+		<input type="text" id="node-config-input-username" />
 	</div>
 	<div class="form-row">
 		<label for="node-config-input-password"><i class="fa fa-key"></i> Password</label>
-		<input type="text" id="node-config-input-password">
+		<input type="text" id="node-config-input-password" />
 	</div>
 	<div class="form-row">
 		<label for="node-config-input-hashed"><i class="fa fa-asterisk"></i> Hashed</label>
-		<input type="checkbox" id="node-config-input-hashed">
+		<input type="checkbox" id="node-config-input-hashed" />
 	</div>
 </script>
