--- a/nodes/http-auth.html
+++ b/nodes/http-auth.html
@@ -1,40 +1,41 @@
 <script type="text/javascript">
-	RED.nodes.registerType("node-red-contrib-httpauth", {
-		category: "function",
+	/* global RED:false */
+	RED.nodes.registerType('node-red-contrib-httpauth', {
+		category: 'function',
 		inputs: 1,
 		outputs: 1,
 		defaults: {
-			name: { value: "" },
-			file: { value: "", type: "node-red-contrib-httpauthfile", required: false },
-			cred: { value: "", type: "node-red-contrib-httpauthcred", required: false },
-			authType: { value: "Basic" },
-			realm: { value: "" },
-			username: { value: "" },
-			password: { value: "" },
-			hashed: { value: false }
+			name: { value: '' },
+			file: { value: '', type: 'node-red-contrib-httpauthfile', required: false },
+			cred: { value: '', type: 'node-red-contrib-httpauthcred', required: false },
+			authType: { value: 'Basic' },
+			realm: { value: '' },
+			username: { value: '' },
+			password: { value: '' },
+			hashed: { value: false },
 		},
-		color: "#E7E7AE",
-		icon: "white-globe.png",
-		label: function () { return this.name.trim() || "http auth"; },
-		labelStyle: function () { return this.name.trim() ? "node_label_italic" : ""; },
-		paletteLabel: "http auth"
+		color: '#E7E7AE',
+		icon: 'white-globe.png',
+		label: function () { return this.name.trim() || 'http auth'; },
+		labelStyle: function () { return this.name.trim() ? 'node_label_italic' : ''; },
+		paletteLabel: 'http auth',
 	});
 </script>
 
 <script type="text/x-red" data-template-name="node-red-contrib-httpauth">
 	<div class="form-row">
 		<label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
-		<input type="text" id="node-input-name">
+		<input type="text" id="node-input-name" />
 	</div>
 	<hr />
 	<div class="form-row">
 		<label for="node-input-file"><i class="fa fa-list"></i> File</label>
-		<input type="text" id="node-input-file">
+		<input type="text" id="node-input-file" />
 	</div>
 	<hr />
 	<div class="form-row">
 		<label for="node-input-cred"><i class="fa fa-list"></i> Credentials</label>
-		<input type="text" id="node-input-cred">
+		<input type="text" id="node-input-cred" />
 	</div>
 	<hr />
 	<div class="form-row">
@@ -46,19 +47,19 @@
 	</div>
 	<div class="form-row">
 		<label for="node-input-realm"><i class="fa fa-globe"></i> Realm</label>
-		<input type="text" id="node-input-realm">
+		<input type="text" id="node-input-realm" />
 	</div>
 	<div class="form-row">
 		<label for="node-input-username"><i class="fa fa-user"></i> Username</label>
-		<input type="text" id="node-input-username">
+		<input type="text" id="node-input-username" />
 	</div>
 	<div class="form-row">
 		<label for="node-input-password"><i class="fa fa-key"></i> Password</label>
-		<input type="text" id="node-input-password">
+		<input type="text" id="node-input-password" />
 	</div>
 	<div class="form-row">
 		<label for="node-input-hashed"><i class="fa fa-asterisk"></i> Hashed</label>
-		<input type="checkbox" id="node-input-hashed">
+		<input type="checkbox" id="node-input-hashed" />
 	</div>
 </script>
 
@@ -67,45 +68,56 @@
 
 <p>This Node-RED module performs Basic and Digest authentication.<br />It is to be used in conjunction with an http input node.</p>
 
-<img src="https://raw.githubusercontent.com/endemecio02/node-red-contrib-httpauth/master/images/flow.png" />
+<p>
+	<img src="https://raw.githubusercontent.com/alexandrainst/node-red-http-basic-auth/main/images/flow.png" />
+<p>
 
 <h2>Config</h2>
-
-<img src="https://raw.githubusercontent.com/endemecio02/node-red-contrib-httpauth/master/images/config.png" />
-
+<p>
+	<img src="https://raw.githubusercontent.com/alexandrainst/node-red-http-basic-auth/main/images/config.png" />
+</p>
 <p>There are three type of configuration:</p>
 <ol>
-  <li>File: the user credentials are stored in a file. (mutliple credentials)</li>
-  <li>Shared: credentials shared which multiple nodes. (one credential)</li>
-  <li>Not Shared: each node has it's own credentials. (one credential)</li>
+	<li>File: the user credentials are stored in a file. (mutliple credentials)</li>
+	<li>Shared: credentials shared which multiple nodes. (one credential)</li>
+	<li>Not Shared: each node has it's own credentials. (one credential)</li>
 </ol>
 
 <p>With all three config types you must specify the following:</p>
 <ul>
-  <li>Auth Type: what authentication type will be used: Basic, Digest</li>
-  <li>Realm: what realm will be used with this node</li>
-  <li>Hashed: are the passwords in the Password field or in the credentials file hashed.<br />
-      This field is only relavent if Auth Type is Digest. It has no effect on Basic.<br />
-      Hash format: MD5(Username:Realm:Password)</li>
+	<li>Auth Type: what authentication type will be used: Basic, Digest</li>
+	<li>Realm: what realm will be used with this node</li>
+	<li>
+		Hashed: are the passwords in the Password field or in the credentials file hashed.<br />
+		This field is only relavent if Auth Type is Digest. It has no effect on Basic.<br />
+		Hash format: MD5(Username:Realm:Password)
+	</li>
 </ul>
 
 <p>With Shared and Not Shared config types you must specify the following:</p>
 <ul>
-  <li>Username: the username</li>
-  <li>Password: the password<br />
-      If you entered a hashed password you must check the Hashed checkbox.</li>
+	<li>Username: the username</li>
+	<li>
+		Password: the password<br />
+		If you entered a hashed password you must check the Hashed checkbox.
+	</li>
 </ul>
 
 <p>With File config type you must specify the following:</p>
 <ul>
-  <li>File: location of the file containing the credentials relative to the presently working directory<br />
-   If the password are hashed you must check the Hashed checkbox.</li>
+	<li>
+		File: location of the file containing the credentials relative to the presently working directory<br />
+		If the password are hashed you must check the Hashed checkbox.
+	</li>
 </ul>
-<h3>File Configuration</h3>
 
-<img src="https://raw.githubusercontent.com/endemecio02/node-red-contrib-httpauth/master/images/file.png" />
+<h3>File Configuration</h3>
+<p>
+	<img src="https://raw.githubusercontent.com/alexandrainst/node-red-http-basic-auth/main/images/file.png" />
+</p>
 
 <h3>Shared config</h3>
-
-<img src="https://raw.githubusercontent.com/endemecio02/node-red-contrib-httpauth/master/images/cred.png" />
+<p>
+	<img src="https://raw.githubusercontent.com/alexandrainst/node-red-http-basic-auth/main/images/cred.png" />
+</p>
 </script>
