--- a/nodes/http-auth-file.html
+++ b/nodes/http-auth-file.html
@@ -4,13 +4,12 @@
 		category: 'config',
 		defaults: {
 			name: { value: '' },
-			authType: { value: 'Basic', required: true },
 			realm: { value: '', required: true },
 			filePath: { value: '', required: true },
 			hashed: { value: false, required: true },
 		},
 		label: function () {
-			return this.name.trim() || '[' + this.authType + '] ' + this.realm.trim() + ':' + this.filePath.trim();
+			return this.name.trim() || this.realm.trim() + ':' + this.filePath.trim();
 		},
 	});
 </script>
@@ -19,13 +18,6 @@
 	<div class="form-row">
 		<label for="node-config-input-name"><i class="fa fa-tag"></i> Name</label>
 		<input type="texth" id="node-config-input-name" />
-	</div>
-	<div class="form-row">
-		<label for="node-config-input-authType"><i class="fa fa-list"></i> Auth Type</label>
-		<select id="node-config-input-authType">
-			<option value="Basic">Basic</option>
-			<option value="Digest">Digest</option>
-		</select>
 	</div>
 	<div class="form-row">
 		<label for="node-config-input-realm"><i class="fa fa-globe"></i> Realm</label>
