--- a/nodes/http-auth-file.html
+++ b/nodes/http-auth-file.html
@@ -28,7 +28,7 @@
 		<input type="text" id="node-config-input-filePath" />
 	</div>
 	<div class="form-row">
-		<label for="node-config-input-hashed"><i class="fa fa-asterisk"></i> Hashed</label>
+		<label for="node-config-input-hashed"><i class="fa fa-asterisk"></i> Hashed credentials</label>
 		<input type="checkbox" id="node-config-input-hashed" />
 	</div>
 </script>
