--- a/nodes/http-auth.html
+++ b/nodes/http-auth.html
@@ -15,9 +15,9 @@
 		},
 		color: '#E7E7AE',
 		icon: 'white-globe.png',
-		label: function () { return this.name.trim() || 'http auth'; },
+		label: function () { return this.name.trim() || 'http basic auth'; },
 		labelStyle: function () { return this.name.trim() ? 'node_label_italic' : ''; },
-		paletteLabel: 'http auth',
+		paletteLabel: 'http basic auth',
 	});
 </script>
 
@@ -27,32 +27,44 @@
 		<input type="text" id="node-input-name" />
 	</div>
 	<hr />
-	<div class="form-row">
-		<label for="node-input-file"><i class="fa fa-list"></i> File</label>
-		<input type="text" id="node-input-file" />
-	</div>
+
+	<fieldset>
+		<legend>Option 1: Simple (not shared)</legend>
+		<div class="form-row">
+			<label for="node-input-realm"><i class="fa fa-globe"></i> Realm</label>
+			<input type="text" id="node-input-realm" />
+		</div>
+		<div class="form-row">
+			<label for="node-input-username"><i class="fa fa-user"></i> Username</label>
+			<input type="text" id="node-input-username" />
+		</div>
+		<div class="form-row">
+			<label for="node-input-password"><i class="fa fa-key"></i> Password</label>
+			<input type="text" id="node-input-password" />
+		</div>
+		<div class="form-row">
+			<label for="node-input-hashed"><i class="fa fa-asterisk"></i> Hashed credentials</label>
+			<input type="checkbox" id="node-input-hashed" />
+		</div>
+	</fieldset>
 	<hr />
-	<div class="form-row">
-		<label for="node-input-cred"><i class="fa fa-list"></i> Credentials</label>
-		<input type="text" id="node-input-cred" />
-	</div>
+
+	<fieldset>
+		<legend>Option 2: Shared</legend>
+		<div class="form-row">
+			<label for="node-input-cred"><i class="fa fa-list"></i> Credentials</label>
+			<input type="text" id="node-input-cred" />
+		</div>
+	</fieldset>
 	<hr />
-	<div class="form-row">
-		<label for="node-input-realm"><i class="fa fa-globe"></i> Realm</label>
-		<input type="text" id="node-input-realm" />
-	</div>
-	<div class="form-row">
-		<label for="node-input-username"><i class="fa fa-user"></i> Username</label>
-		<input type="text" id="node-input-username" />
-	</div>
-	<div class="form-row">
-		<label for="node-input-password"><i class="fa fa-key"></i> Password</label>
-		<input type="text" id="node-input-password" />
-	</div>
-	<div class="form-row">
-		<label for="node-input-hashed"><i class="fa fa-asterisk"></i> Hashed</label>
-		<input type="checkbox" id="node-input-hashed" />
-	</div>
+
+	<fieldset>
+		<legend>Option 3: File</legend>
+		<div class="form-row">
+			<label for="node-input-file"><i class="fa fa-list"></i> File</label>
+			<input type="text" id="node-input-file" />
+		</div>
+	</fieldset>
 </script>
 
 <script type="text/x-red" data-help-name="node-red-http-basic-auth">
