--- a/nodes/http-auth.html
+++ b/nodes/http-auth.html
@@ -11,7 +11,6 @@
 			realm: { value: '' },
 			username: { value: '' },
 			password: { value: '' },
-			hashed: { value: false },
 		},
 		color: '#E7E7AE',
 		icon: 'white-globe.png',
@@ -40,10 +39,6 @@
 		<div class="form-row">
 			<label for="node-input-password"><i class="fa fa-key"></i> Password</label>
 			<input type="text" id="node-input-password" />
-		</div>
-		<div class="form-row">
-			<label for="node-input-hashed"><i class="fa fa-asterisk"></i> Hashed credentials</label>
-			<input type="checkbox" id="node-input-hashed" />
 		</div>
 	</fieldset>
 
@@ -89,16 +84,14 @@
 
 <p>With all three config types you must specify the following:</p>
 <ul>
-	<li><i>Realm</i>: what realm will be used with this node</li>
-	<li><i>Hashed</i>: are the passwords in the Password field or in the credentials file hashed.</li>
+	<li><i>Realm</i>: what authorization realm will be used with this node</li>
 </ul>
 
 <p>With <i>Simple</i> and <i>Shared</i> config types you must specify the following:</p>
 <ul>
 	<li><i>Username</i>: the username</li>
 	<li>
-		<i>Password</i>: the password.<br />
-		If you entered a hashed password you must check the Hashed checkbox.
+		<i>Password</i>: the password may be in plain-text or hashed (only bcrypt is supported).
 	</li>
 </ul>
 
@@ -106,7 +99,8 @@
 <ul>
 	<li>
 		<i>File</i>: location of the file containing the credentials relative to the presently working directory.<br />
-		If the password are hashed you must check the Hashed checkbox.
+		The format for each line is <code>user:realm:password</code>.<br />
+		The passwords may be in plain-text or hashed (only bcrypt is supported).
 	</li>
 </ul>
 
