Compatibility work-around for 'bcrypt' library

--- a/nodes/http-auth.html
+++ b/nodes/http-auth.html
@@ -25,6 +25,10 @@
 		<label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
 		<input type="text" id="node-input-name" />
 	</div>
+	<p>
+		ℹ️ In the options below, passwords may be given as plain-text or hashed using bcrypt.<br />
+		Example : <code>require('bcryptjs').hashSync('my-password', 10);</code>
+	</p>
 
 	<fieldset>
 		<legend>Option 1: Simple</legend>
