Simplify node names

--- a/nodes/http-auth-cred.html
+++ b/nodes/http-auth-cred.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 	/* global RED:false */
-	RED.nodes.registerType('node-red-http-basic-auth-cred', {
+	RED.nodes.registerType('http-basic-auth-cred', {
 		category: 'config',
 		defaults: {
 			name: { value: '' },
@@ -14,7 +14,7 @@
 	});
 </script>
 
-<script type="text/x-red" data-template-name="node-red-http-basic-auth-cred">
+<script type="text/x-red" data-template-name="http-basic-auth-cred">
 	<div class="form-row">
 		<label for="node-config-input-name"><i class="fa fa-tag"></i> Name</label>
 		<input type="texth" id="node-config-input-name" />
