Remove inline example

--- a/nodes/http-auth.html
+++ b/nodes/http-auth.html
@@ -26,8 +26,7 @@
 		<input type="text" id="node-input-name" />
 	</div>
 	<p>
-		ℹ️ In the options below, passwords may be given as plain-text or hashed using bcrypt.<br />
-		Example : <code>require('bcryptjs').hashSync('my-password', 10);</code>
+		ℹ️ In the options below, passwords may be given as plain-text or hashed using bcrypt.
 	</p>
 
 	<fieldset>
