--- a/nodes/http-auth.html
+++ b/nodes/http-auth.html
@@ -8,6 +8,7 @@
 			name: { value: '' },
 			file: { value: '', type: 'http-basic-auth-file', required: false },
 			cred: { value: '', type: 'http-basic-auth-cred', required: false },
+			multiple: { value: '', type: 'http-basic-auth-multiple', required: false },
 			realm: { value: '' },
 			username: { value: '' },
 			password: { value: '' },
@@ -54,7 +55,15 @@
 	</fieldset>
 
 	<fieldset>
-		<legend>Option 3: File</legend>
+		<legend>Option 3: Multiple</legend>
+		<div class="form-row">
+			<label for="node-input-cred"><i class="fa fa-list"></i> Credentials</label>
+			<input type="text" id="node-input-multiple" />
+		</div>
+	</fieldset>
+
+	<fieldset>
+		<legend>Option 4: File</legend>
 		<div class="form-row">
 			<label for="node-input-file"><i class="fa fa-list"></i> File</label>
 			<input type="text" id="node-input-file" />
