--- a/nodes/http-auth.html
+++ b/nodes/http-auth.html
@@ -8,13 +8,13 @@
 			name: { value: '' },
 			file: { value: '', type: 'http-basic-auth-file', required: false },
 			multiple: { value: '', type: 'http-basic-auth-multiple', required: false },
-			realm: { value: '' },
+			realm: { value: '', required: true },
 			username: { value: '' },
 			password: { value: '' },
 		},
 		color: '#E7E7AE',
 		icon: 'white-globe.png',
-		label: function () { return this.name.trim() || 'http basic auth'; },
+		label: function () { return this.name.trim() || 'http basic auth: ' + this.realm; },
 		labelStyle: function () { return this.name.trim() ? 'node_label_italic' : ''; },
 		paletteLabel: 'http basic auth',
 	});
