change image links from public to local Apply https://github.com/endemecio02/node-red-contrib-httpauth/pull/3 from @sakazuki

--- a/nodes/http-auth.html
+++ b/nodes/http-auth.html
@@ -71,7 +71,7 @@
 </p>
 
 <p>
-	<img src="https://raw.githubusercontent.com/alexandrainst/node-red-http-basic-auth/main/images/flow.png" />
+	<img src="node-red-http-basic-auth/images/flow.png" />
 <p>
 
 <h2>Config</h2>
