--- a/nodes/http-auth.html
+++ b/nodes/http-auth.html
@@ -3,7 +3,7 @@
 	RED.nodes.registerType('http-basic-auth', {
 		category: 'function',
 		inputs: 1,
-		outputs: 1,
+		outputs: 2,
 		defaults: {
 			name: { value: '' },
 			file: { value: '', type: 'http-basic-auth-file', required: false },
@@ -77,7 +77,7 @@
 <h2>Config</h2>
 <p>There are three types of configuration:</p>
 <ol>
-	<li><i>Simple</i>: each node has it’s own credentials. (one credential)</li>
+	<li><i>Simple</i>: each node has its own credentials. (one credential)</li>
 	<li><i>Multiple credentials</i>: credentials shared with multiple nodes. (multiple credentials)</li>
 	<li><i>File with multiple credentials</i>: the user credentials are stored in a file. (multiple credentials)</li>
 </ol>
